--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-pdf": "^10.3.0",
     "react-router-dom": "^7.13.0",
     "styled-components": "^6.3.8"
   },
